--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/comp426-2022-fall/a04-azheng47/issues"
   },
-  "homepage": "https://github.com/comp426-2022-fall/a04-azheng47#readme"
+  "homepage": "https://github.com/comp426-2022-fall/a04-azheng47#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
